# webapp/src/app/api/orders/route.ts
@@ -1,5 +1,6 @@
 import { FoodsOrderd } from '@/types/foodOrdered';
 import { NextResponse } from 'next/server';
+import { cookies } from 'next/headers';
 
 const API_URL = process.env.API_URL;
 
@@ -25,6 +26,27 @@ export async function POST(request: Request) {
     })
 
     const data = await res.json();
+
+    return NextResponse.json(data);
+}
+
+export async function GET() {
+
+    const cookieStore = cookies();
+    const token = (await cookieStore).get("token")?.value || "redondi";
+
+    const res = await fetch(`${API_URL}/orders`, {
+        method: "GET",
+        headers: {
+            "authorization": `Bearer ${token}`
+        }
+    });
+
+    const data = await res.json();
+
+    if (!res.ok) {
+        return NextResponse.json({ error: data.message || 'Not Found' }, { status: res.status });
+    }
 
     return NextResponse.json(data);
 }
