# webapp/src/app/api/orders/search/daily/[value]/route.ts
@@ -1,0 +1,33 @@
+import { NextResponse, NextRequest } from 'next/server';
+import { cookies } from "next/headers";
+
+interface Params {
+    value: string;
+}
+
+const API_URL = process.env.API_URL;
+
+export async function GET(
+    request: NextRequest,
+    { params }: { params: Promise<Params> }
+) {
+
+    const cookieStore = cookies();
+    const token = (await cookieStore).get("token")?.value || "redondi";
+    const { value } = await params;
+
+    const res = await fetch(`${API_URL}/orders/search/daily/${value}`, {
+        method: "GET",
+        headers: {
+            "authorization": `Bearer ${token}`
+        }
+    });
+
+    const data = await res.json();
+
+    if (!res.ok) {
+        return NextResponse.json({ error: data.message || 'Not Found' }, { status: res.status });
+    }
+
+    return NextResponse.json(data);
+}
